--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- SEO -->
     <title>Uchebest Store | Premium Nigerian Rice & Beans</title>
     <meta name="description" content="Premium Nigerian rice and beans, grown with care — delivered to your table with loyalty rewards and smart budgeting.">
-    <meta name="keywords" content="rice, beans, nigerian food, grocery, budget, loyalty points">
+    <meta name="keywords" content="rice, beans, nigerian food, grocery, budget, loyalty points,uchebest,uchebest store,Uche best,best rice,best beans,nigerian rice,nigerian beans">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Uchebest Store">
